[package]
name = "terrain_generator_2d"
version = "0.1.0"
authors = ["gluthb <gluthb@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = {version = "4.1.8", features = ["derive"] }
chrono = "0.4.24"
noise = "0.8.2"
image = "*"
log = "0.4.17"
palette = "*"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
simdnoise = "3.1.6"
